@@ -10,6 +10,7 @@ import javax.xml.crypto.Data;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class RESPHandler {
@@ -22,7 +23,6 @@ public class RESPHandler {
 
     public static void sendCommand(final OutputStream os, Pair<String, DataType> result) {
         try {
-            int len = result.first.length();
             StringBuilder sb = new StringBuilder();
 
             sb.append((char)result.second.getSymbol());
@@ -79,22 +79,29 @@ public class RESPHandler {
         }
         System.out.println("]");
 
-        if (!args.isEmpty() && args.get(0).equals(Command.ECHO.toString())) {
-            return new Pair<> (args.get(1), DataType.BULK_STRING);
-        } else if (!args.isEmpty() && args.get(0).equals(Command.PING.toString())) {
-            return new Pair<>("PONG", DataType.SIMPLE_STRING);
-        } else if (!args.isEmpty() && args.get(0).equals(Command.GET.toString())) {
-            return Container.get(args.get(1));
-        } else if (!args.isEmpty() && args.get(0).equals(Command.SET.toString())) {
-            Long expr = null;
+        if (!args.isEmpty()) {
+            var cmd = Command.getCommand(args.getFirst());
 
-            if (args.size() > 3 && Argument.getArgument(args.get(3)).equals(Argument.PX)) {
-                expr = Long.parseLong(args.get(4));
+            if (Main.commandHandlers.containsKey(cmd)) {
+                return Main.commandHandlers.get(cmd).handle(args.subList(1, args.size()));
             }
-            return Container.set(args.get(1), args.get(2), expr);
+            throw new UnsupportedOperationException("This operation is not yet implemented.");
         }
 
         throw  new UnsupportedOperationException("This operation is not yet implemented.");
+    }
+
+    public static Pair<String, DataType> handle(RedisInputStream in, byte fb) {
+        String req = (char)fb + in.readLine();
+
+        Command cmd = Command.getCommand(req.substring(0, req.indexOf(' ')));
+
+        var args = Arrays.stream(req.substring(req.indexOf(' ') + 1).split(" ")).toList();
+
+        if (Main.commandHandlers.containsKey(cmd)) {
+            return Main.commandHandlers.get(cmd).handle(args.subList(1, args.size()));
+        }
+        throw new UnsupportedOperationException("This operation is not yet implemented.");
     }
 
     private static Pair<String, DataType> handleBulkString(RedisInputStream in) {
@@ -103,32 +110,5 @@ public class RESPHandler {
 
     public static Pair<String, DataType> handleSimpleString(RedisInputStream in) {
         throw new UnsupportedOperationException("This operation is not yet implemented.");
-    }
-
-    public static Pair<String, DataType> handle(RedisInputStream in, byte fb) {
-        String req = (char)fb + in.readLine();
-
-        String command = req.substring(0, req.indexOf(' '));
-
-        String[] args = req.substring(req.indexOf(' ') + 1).split(" ");
-
-        if (Command.getCommand(command).equals(Command.ECHO)) {
-            return new Pair<> (req.substring(req.indexOf(' ') + 1), DataType.BULK_STRING);
-        } else if (Command.getCommand(command).equals(Command.PING)) {
-            return new Pair<>("PONG", DataType.SIMPLE_STRING);
-        } else if (Command.getCommand(command).equals(Command.GET)) {
-            return new Pair<>(req.substring(req.indexOf(' ') + 1), DataType.BULK_STRING);
-        } else if (Command.getCommand(command).equals(Command.SET)) {
-            return new Pair<>(req.substring(req.indexOf(' ') + 1), DataType.SIMPLE_STRING);
-        } else if (Command.getCommand(command).equals(Command.SET)) {
-            return Container.get(args[1]);
-        } else if (Command.getCommand(command).equals(Command.SET)) {
-            Long expr = null;
-            if (args.length > 2 && Argument.getArgument(args[2]).equals(Argument.PX)) {
-                expr = Long.parseLong(args[3]);
-            }
-            return Container.set(args[1], args[2],  expr);
-        }
-        throw  new UnsupportedOperationException("This operation is not yet implemented.");
     }
 }
